# track-my-attendance

./: .gitignore  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml  feature_request.yml  privileged.yml
backend/: README.md  pyproject.toml
backend/backend/: app.py  deps.py  security.py  settings.py
backend/backend/crud/: __init__.py  users.py
backend/backend/database/: get_session.py  models.py
backend/backend/helpers/: deps.py  settings.py
backend/backend/routes/: auth.py  users.py
backend/backend/schemas/: __init__.py  token.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: cb9607c1b752_feat_create_users_table.py
backend/tests/: conftest.py  factories.py  test_app.py  test_db.py  test_security.py
backend/tests/test_routes/: test_auth.py  test_users.py
docs/: Architecture.md  Roadmap.md  Setup.md
